# mia

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
mia/: __init__.py  __main__.py  executive.py
tests/: test_executive.py
